# SP2025

./: CMakeLists.txt  main.cpp
2-Conditions/: 1-SedumCifrenbroj.cpp  10-SpecijalenBroj.cpp  11-BrojTelefon.cpp  12-TikTakBroj.cpp  2-QuadraticEquation.cpp  3-CetiriCifrenKolega.cpp  4-KreirajKorisnickaSmetka.cpp  5-NajdolgaOtsecka.cpp  6-PalindromPetCifrenBroj.cpp  7-PoeniOcenka.cpp  8-ValidenDatum.cpp  8.1-ValidenDatum.cpp  9-PotrosenaElektricnaEnergija.cpp
3-Loops/: 0.1-prviStoBroevi.cpp  0.2-sumaNaCifri.cpp  0.4-CetiriCifrenBrojCifri.cpp  1-StarsInfinitySign.cpp  10-StarsFullLeftBottomTriangle.cpp  11-StarsHollowLeftBottomTriangle.cpp  12-StarsFullTopLeftTriangle.cpp  13-StarsHollowTopLeftTriangle.cpp  14-StarsFullBottomRIghtTriangle.cpp  15-StarsHollowBottomRightTriangle.cpp  16-ZbirSlikaBroj.cpp  17-MaxBroj.cpp  2-BroeviVoInterval.cpp  3-ZbirCifri.cpp  4-DeliviBroeviInterval.cpp  5-FiskalnaSmetka.cpp  6-FiskalnaSmetka2.cpp  7-NajgolemaRazlika.cpp  8-StarsSquareAndDiagonal.cpp  9-StarsHourGlass.cpp
4-Functions/: 1-ApsolutnaVrednost.cpp  2-KrugDLP.cpp  3-CifriVoVtorBroj.cpp  4-Bingo.cpp  5-ProstiBroevi.cpp  6-ProstiBroeviDo1000.cpp  7-Kalkulator.cpp
5-Arrays/: 1-DaliNiziteSeIsti.cpp  2-ZbirParniINeparniElementi.cpp  3-SkalarenProizvod.cpp  4-StrogoRasteckaIliOpagjacka.cpp  5-RotiranjeEdenDesno.cpp  6-RotiranjeMDesno.cpp  7-IzbrishiDuplikati.cpp  8-EdnocifreniBroevi.cpp
Zadaci1/: conditions.cpp  loops.cpp
