cmake_minimum_required(VERSION 3.24)
project(SP2025)

set(CMAKE_CXX_STANDARD 17)

add_executable(SP2025 main.cpp)

add_executable(SedumCifrenBroj 2-Conditions/1-SedumCifrenbroj.cpp)

add_executable(quadraticEquation 2-Conditions/2-QuadraticEquation.cpp)

add_executable(cetiriCifrenKolega 2-Conditions/3-CetiriCifrenKolega.cpp)

add_executable(kreirajKorisnickaSmetka 2-Conditions/4-KreirajKorisnickaSmetka.cpp)

add_executable(najdolgaOtsecka 2-Conditions/5-NajdolgaOtsecka.cpp)

add_executable(palindromPetCifrenBroj 2-Conditions/6-PalindromPetCifrenBroj.cpp)

add_executable(poeniOcenka 2-Conditions/7-PoeniOcenka.cpp)

add_executable(validenDatum 2-Conditions/8-ValidenDatum.cpp)

add_executable(validenDatum1 2-Conditions/8.1-ValidenDatum.cpp)

add_executable(potrosenaStruja 2-Conditions/9-PotrosenaElektricnaEnergija.cpp)

add_executable(specijalenBroj 2-Conditions/10-SpecijalenBroj.cpp)

add_executable(brojTelefon 2-Conditions/11-BrojTelefon.cpp)

add_executable(tikTakBroj 2-Conditions/12-TikTakBroj.cpp)

add_executable(prviStobroevi 3-Loops/0.1-prviStoBroevi.cpp)

add_executable(sumaCifri 3-Loops/0.2-sumaNaCifri.cpp)

add_executable(cetiriCifrenBrojCifri 3-Loops/0.4-CetiriCifrenBrojCifri.cpp)

add_executable(starsInfinitySign 3-Loops/1-StarsInfinitySign.cpp)

add_executable(broeviVoInterval 3-Loops/2-BroeviVoInterval.cpp)

add_executable(zbirCifri 3-Loops/3-ZbirCifri.cpp)

add_executable(deliviBroeviInterval 3-Loops/4-DeliviBroeviInterval.cpp)

add_executable(fiskalnaSmetka1 3-Loops/5-FiskalnaSmetka.cpp)

add_executable(fiskalnaSmetka2 3-Loops/6-FiskalnaSmetka2.cpp)

add_executable(najgolemaRazlika 3-Loops/7-NajgolemaRazlika.cpp)

add_executable(starsSquareAndDiagonal 3-Loops/8-StarsSquareAndDiagonal.cpp)

add_executable(starsHourGlass 3-Loops/9-StarsHourGlass.cpp)

add_executable(starsFullLeftBottomTriangle 3-Loops/10-StarsFullLeftBottomTriangle.cpp)

add_executable(starsHollowLeftBottomTriangle 3-Loops/11-StarsHollowLeftBottomTriangle.cpp)

add_executable(starsFullTopLeftTriangle 3-Loops/12-StarsFullTopLeftTriangle.cpp)

add_executable(starsHollowTopLeftTriangle 3-Loops/13-StarsHollowTopLeftTriangle.cpp)

add_executable(starsFullBottomRightTriangle 3-Loops/14-StarsFullBottomRIghtTriangle.cpp)

add_executable(starsHollowBottomRightTriangle 3-Loops/15-StarsHollowBottomRightTriangle.cpp)

add_executable(zbirSlikaBroj 3-Loops/16-ZbirSlikaBroj.cpp)

add_executable(maxBroj 3-Loops/17-MaxBroj.cpp)

add_executable(apsolutnaVrednost 4-Functions/1-ApsolutnaVrednost.cpp)

add_executable(krugDLP 4-Functions/2-KrugDLP.cpp)

add_executable(cifriVoVtorBroj 4-Functions/3-CifriVoVtorBroj.cpp)

add_executable(bingo 4-Functions/4-Bingo.cpp)

add_executable(prostiBroevi 4-Functions/5-ProstiBroevi.cpp)

add_executable(prostiBroeviDo1000 4-Functions/6-ProstiBroeviDo1000.cpp)

add_executable(kalkulator 4-Functions/7-Kalkulator.cpp)

add_executable(daliNiziteSeIsti 5-Arrays/1-DaliNiziteSeIsti.cpp)

add_executable(zbirParniNeparniElementi 5-Arrays/2-ZbirParniINeparniElementi.cpp)

add_executable(skalarenProizvod 5-Arrays/3-SkalarenProizvod.cpp)

add_executable(strogoRasteckaIliOpagjacka 5-Arrays/4-StrogoRasteckaIliOpagjacka.cpp)

add_executable(rotiranjeEdenDesno 5-Arrays/5-RotiranjeEdenDesno.cpp)

add_executable(rotiranjeMDesno 5-Arrays/6-RotiranjeMDesno.cpp)

add_executable(izbrishiDuplikati 5-Arrays/7-IzbrishiDuplikati.cpp)

add_executable(ednocifreniBroevi 5-Arrays/8-EdnocifreniBroevi.cpp)



